Update comments in the book

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -1080,6 +1080,17 @@ to add marginalia supplementary to the main theme.</p>
 Так вот, выбор одного из двух вариантов производится в момент, когда
 после открытия коробки происходит <a href="https://ru.wikipedia.org/wiki/Эффект_наблюдателя" target="_blank">наблюдение</a>.</p>
 
+<template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
+<p>Поэтому ША Орах Хаим <a href="https://www.sefaria.org/Shulchan_Arukh,_Orach_Chayim.230.1" target="_blank">230</a>
+со ссылкой на Брахот <a href="https://www.sefaria.org/Berakhot.54a.4" target="_blank">54a</a>
+запрещает молиться о благоприятном исходе события, которое уже произошло.
+Например, когда человек возвращается домой и слышит крики в городе,
+не должен просить, чтобы то происшествие не случилось в его доме — потому
+что коллапс волновой функции уже произошёл для участников того события.
+Или запрещается молиться о том, чтобы родился мальчик, когда имеется
+возможность сделать УЗИ, и т.д.</p>
+</div></div></template>
+
 <p>Мне кажется, что это не самый удачный пример, потому что кот тоже является
 наблюдателем — он наблюдает за состоянием банки с кислотой.  Лучше было
 бы в эксперименте заменить кота на какой-то неодушевлённый бессознательный
@@ -1923,6 +1934,11 @@ to add marginalia supplementary to the main theme.</p>
 <p>Благодаря милости Б‑га, вышеописанный случай, когда была проткнута шина,
 произошёл прямо рядом с шиномонтажной мастерской,
 и через день всё удалось легко исправить, поэтому удалось избежать лишних проблем.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Кстати, когда не по злому умыслу нарушается Суббота, то разрешается
+продолжать нарушение до окончания Субботы, но только с условием стараться
+больше не допускать подобное в последующие Субботы.
+В ША Орах Хаим <a href="https://www.sefaria.org/Shulchan_Arukh,_Orach_Chayim.568.1" target="_blank">568</a>
+это называется словом איבד — когда нарушенная Суббота потеряна (<em>lost</em>).</span></span></template>
 Это значит, что этот случай был не наказанием, а только предупреждением.
 Если бы я проигнорировал это предупреждение и продолжил бы ездить по Субботам,
 то после предупреждения наступило бы суровое наказание.</p>
@@ -9726,7 +9742,8 @@ Identifying Humor, Satire, and Parody in Rabbinic Literature”)</em></p>
 если три раза в день в молитве ортодоксы произносят антисемитскую просьбу
 уничтожения евреев: «все вероотступники пусть сгинут в одночасье»,
 где под словом «вероотступники» имеются в виду евреи, которые не соблюдают все
-ортодоксальные устрожения (<em>хумрот</em>) — не только реформисты, а вообще все неортодоксы,
+ортодоксальные устрожения (<em><a href="https://en.wikipedia.org/wiki/Chumra_(Judaism)" target="_blank">хумрот</a></em>) —
+не только реформисты, а вообще все неортодоксы,
 да и вообще все евреи, кто не следует всем предписаниям Шульхан Аруха, и уж тем
 более все евреи по отцовской линии, про которых ортодоксы всё время озабочены,
 как бы от них поскорее избавиться так, как будто их и не было, по принципу
@@ -11980,6 +11997,12 @@ LED (<em>light-emitting diode</em>) излучают фотоны, когда э
 В будущем будет завершён переход на искусственное мясо, и тогда
 будет полностью остановлен забой скота.  Было бы цинизмом
 в такие времена пытаться открыть скотобойню в Храме.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Действительно жертвоприношения были не столько похожи на
+современные пикники с поеданием шашлыков и прыжками через костёр,
+сколько на скотобойню — Рамбам в
+«Морэ Невухим» <a href="https://www.sefaria.org/Guide_for_the_Perplexed,_Part_3.45.12" target="_blank">3:45</a>
+утверждал, что запах разделки туш заглушали ароматами воскуряемых благовоний,
+т.е. растительные приношения были побочной необходимостью.</span></span></template>
 И даже приносить в жертву искусственно выращенное мясо
 было бы издевательством.  По этой же причине,
 несмотря на то, что не производится убийство живого существа,
@@ -15533,8 +15556,11 @@ derived from <em>Babel fish</em></span></span></template></p>
 <p>Особенно такая несбалансированность выделяется на фоне того,
 что с 1950 года разрешили нарушать Субботу вождением автомобиля.
 Субботу нарушать разрешили, а дискриминирующую евреев алаху не изменили.
-Раз всё равно разрешили нарушать Тору, почему бы не отменить бесчеловечную алаху
-и восстановить закон Торы о наследовании также и по отцовской линии.
+Раз всё равно разрешили нарушать Тору, почему бы не отменить бесчеловечную алаху —
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">и восстановить закон Торы о наследовании также и по отцовской линии</span></span></template>
+как отменили унизительную процедуру
+<em><a href="https://en.wikipedia.org/wiki/Ordeal_of_the_bitter_water" target="_blank">сота</a></em>
+(Мишна Сота <a href="https://www.sefaria.org/Mishnah_Sotah.9.9" target="_blank">9:9</a>).
 Почему смогли ликвидировать дискриминацию женщин, но оставили
 дискриминацию евреев по отцовской линии.  Ведь так же как
 еврейским женщинам обидно, когда их выгоняют ультраортодоксы из мест,
