Update comments in the book

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -2496,7 +2496,8 @@ to add marginalia supplementary to the main theme.</p>
 Известно (Пенроуз), что время реакции сознания составляет две секунды.
 Поэтому особенно в стрессовом состоянии человек может потерять
 контроль над своими действиями на время не большее двух секунд.
-(Из-за этого происходят всевозможные оговорки и «описьки по Фрейду».)</span></span></template>
+(Из-за этого происходят всевозможные оговорки.)</span></span></template>
+<!-- и «описьки по Фрейду» -->
 Только по истечении времени человек может прийти в себя, собраться с мыслями
 и начать действовать в соответствии с повелениями своей души.
 Поэтому желательно подождать с решением, особенно если проблема вызывает
@@ -3905,6 +3906,12 @@ to add marginalia supplementary to the main theme.</p>
 
 <p>Этот ад был ни за что — в детстве я был примерным еврейским мальчиком,
 отличником, учился на одни пятёрки, был интеллигентным, не сквернословил,
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">в отличие от некоторых посетителей йешив — было ужасно слышать, как
+они матерились, перефразируя «Мы на <em>лашон һа‑ра</em> не ругаемся, мы на нём
+разговариваем», таким образом нарушая запрет <em>лашон һа‑ра</em>, подробно разобранный
+в книге «Врата раскаяния» <a href="https://www.sefaria.org/Sha'arei_Teshuvah.3.230" target="_blank">3:230</a>
+со ссылкой на Псахим <a href="https://www.sefaria.org/Pesachim.3a.10" target="_blank">3a</a> — но среди
+ортодоксов это были очень редкие исключения, это был их <em>йецер һа‑ра</em></span></span></template>
 всем интересовался, старался со всеми дружить — например, в школе
 все разделялись на враждующие компании, а я между ними был примирителем,
 как сказано в Теһилим <a href="https://www.sefaria.org/Psalms.34.15" target="_blank">34:15</a>:
@@ -4430,9 +4437,10 @@ to add marginalia supplementary to the main theme.</p>
 отошёл от иудаизма.</span></span></template>  Это звучало как издевательство, но я не обиделся,
 а продолжил целыми днями в йешиве читать разную алахическую литературу,
 каждый день питаясь в столовой йешивы.  Качество еды в столовой было отвратительнейшее,
-еда была очень невкусная и непитательная.  Я уже давно привык к домашней еде,
-а в столовой еда была точно такая же, как когда-то была в советских
-студенческих столовых, когда было такое ощущение, что в кастрюлях с супом
+еда была очень невкусная и непитательная. <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">низкокалорийная</span></span></template>
+Я уже давно привык к домашней еде, а в столовой еда была
+точно такая же, как когда-то была в советских студенческих
+столовках, когда было такое ощущение, что в кастрюлях с супом
 полоскали грязные тряпки.  Вкусные блюда были только на трапезы в Шаббат,
 а в остальные дни приходилось терпеть.</p>
 
@@ -7259,6 +7267,14 @@ XX <a href="https://www.sefaria.org/The_Antiquities_of_the_Jews.20.7" target="_b
 выгнали из Израиля, а потом другие раввины отфутболивали меня обратно в Израиль,
 т.е. ортодоксальные раввины попросту лгали, чтобы отвязаться, а это ещё один
 случай возведения препятствия перед слепым.</p>
+
+<template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
+<p>Йевамот <a href="https://www.sefaria.org/Yevamot.65b.8" target="_blank">65b</a> дозволяет говорить
+неправду только во имя установления мира, т.е. разрешена «ложь во спасение»
+и для самозащиты.  Это противоположно тому, что называется «ставить
+препятствие перед слепым» — когда обман наносит ущерб.  Таким образом
+лгать можно, только когда нет вреда и никому не причиняются страдания.</p>
+</div></div></template>
 
 <p>Б‑г дал мне много случаев, которые отвечают на вопрос, почему ортодоксы
 не в состоянии совершать добрые дела.</p>
@@ -11653,10 +11669,14 @@ LED (<em>light-emitting diode</em>) излучают фотоны, когда э
 наоборот — был принят дикий обычай мучить бедных птиц кручением-верчением
 над головой во время обряда <em>капарот</em>.  А это прямое нарушение мицвы
 <em>исур цаар баалей хаим</em> — запрет причинения страданий животным.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Вот пример, как лично я выполняю эту заповедь: после того, когда я увидел
+в зоопарке страшные мучения белых медведей в тесной клетке с крошечным бассейном,
+то пожертвовал свои последние деньги как вклад в строительство для них
+просторного жилища в виде скалистой территории с большим водоёмом.</span></span></template>
+К тому же такая жестокость напоминает поведение идолопоклонников — так Билам
+бил ослицу (Бемидбар <a href="https://www.sefaria.org/Numbers.22.21-35" target="_blank">22:21-35</a>).
 <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">В то время как требуют кошерного забоя курицы, сами издеваются
-над животными в капарот.</span></span></template> К тому же такая жестокость
-напоминает поведение идолопоклонников — так Билам бил ослицу
-(Бемидбар <a href="https://www.sefaria.org/Numbers.22.21-35" target="_blank">22:21-35</a>).</p>
+над животными в капарот.</span></span></template></p>
 
 <p>Некоторые раввины осознали проблемность этого обычая, и поэтому
 поощряли замену курицы деньгами, чтобы вращали над головой денежные купюры.
@@ -17565,7 +17585,7 @@ derived from <em>Babel fish</em></span></span></template></p>
 т.е. когда компенсируют своё чувство вины, возникающее из-за недостатка
 собственного соблюдения, фанатической поддержкой тех, кто соблюдает
 больше необходимого.
-А когда молят о возвращении жертвоприношений, которых сами желают,
+А когда молят о возвращении жертвоприношений, которых сами не желают,
 это сродни шизофрении, но на самом деле является просто лицемерием.</p>
 </div></div></template>
 
@@ -17615,14 +17635,20 @@ derived from <em>Babel fish</em></span></span></template></p>
 и какие книги читать, и т.д.
 Поэтому неортодоксальным евреям настоятельно советую читать тексты ортодоксов
 даже при том, что цели ортодоксов и неортодоксальных евреев различаются:
-сохранение традиций <em>vs</em> исправление мира.
-Вообще изучение иудаизма аналогично получению ещё одного образования.
+сохранение традиций <em>vs</em> исправление мира.</p>
+
+<p>Вообще изучение иудаизма аналогично получению ещё одного образования.
 Немногие люди находят в себе силы получить второе образование
 в дополнение к первому основному, которое используют
 для продвижения в профессиональной карьере и для получения дохода.
-Кстати, поэтому большинство ультраортодоксов лишены возможности
+По этой же причине большинство ультраортодоксов лишены возможности
 зарабатывать квалификационным трудом, когда получают только
 одно образование в виде изучения Талмуда.</p>
+
+<p>А соблюдение всех ортодоксальных устрожений — это работа с полной занятостью.
+Если работать полный рабочий день только для соблюдения всех традиций,
+то остаётся слишком мало свободного времени на дополнительную работу
+по совершению добрых дел и улучшению мира.</p>
 </div></div></template>
 
 <p>Вместо того, чтобы принять меня в ортодоксальную общину, ортодоксы сами
