Update comments in the book

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -22954,6 +22954,7 @@ GPT — один из самых успешных типов
 не заботясь о правдоподобности всего генерируемого текста как целого.
 Этот недостаток получил название
 <a href="https://ru.wikipedia.org/wiki/Галлюцинация_(искусственный_интеллект)" target="_blank">галлюцинация</a>.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Поэтому к ответам применима поговорка: “doverAI, no proverAI”.</span></span></template>
 Есть несколько возможных вариантов решения этой проблемы от использования
 более крупных семантических единиц до встраивания дополнительного модуля
 <a href="https://ru.wikipedia.org/wiki/Фактчекинг" target="_blank">фактчекинга</a>.
@@ -23408,6 +23409,12 @@ AlphaGo стал играть сам с собой (<em><a href="https://en.wiki
 как в глубину, так и в ширину.  И тогда требуется
 <a href="https://ru.wikipedia.org/wiki/Смена_парадигм" target="_blank">смена парадигм</a>
 (<em>paradigm shift</em>) для продолжения экспоненциального роста.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Для достижения точки сингулярности больше подходит ускорение
+не по экспоненциальной, а по гиперболической функции, которая
+при приближении к нулю стремится к бесконечности.
+А если посмотреть на прогресс в прошлом, то вырисовывается
+более точная закономерность — лестница сигмоидов, где
+каждая ступенька соответствует смене парадигм.</span></span></template>
 Но проблема в том, что это непредсказуемый процесс, потому что
 зависит не только от физических ограничений, но и от человеческого фактора —
 от способностей людей придумывать новые изобретения для следующих прорывов,
@@ -23706,7 +23713,7 @@ potentially spreads misinformation or targets a specific group or individuals”
 последуют этому «благородному призыву» и остановят свои разработки.</p>
 
 <p>Например, нетрудно представить, как выведет на новый уровень возможности
-дезинформации <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><em>misinformation</em></span></span></template> и пропаганды условный YandexGPT.
+дезинформации <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><em>misinformation</em>, <em>fake news</em></span></span></template> и пропаганды условный YandexGPT.
 <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Яндекс как Лени Рифеншталь или Альберт Шпеер — поставили
 свой талант на службу фашизму.</span></span></template>  Натренированный на рашистских
 ресурсах виртуальный помощник будет помогать планировать все детали ИПСО,
@@ -24164,7 +24171,9 @@ and I am not capable of independent action.”</em></p>
 подключить ИИ и для решения общественных проблем,
 например, в качестве судей и т.д.
 В результате люди увидят, насколько мудро ИИ начнёт решать
-<a href="https://ru.wikipedia.org/wiki/Глобальные_проблемы" target="_blank">проблемы человечества</a>.</p>
+<a href="https://ru.wikipedia.org/wiki/Глобальные_проблемы" target="_blank">проблемы человечества</a>.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Как многие ждут от евреев решения глобальных проблем,
+так и от ИИ тоже ожидается такая же помощь.</span></span></template></p>
 
 <p>И тогда люди, уставшие от нескончаемых конфликтов и неразрешимых проблем,
 взмолятся и возжелают помощи от суперинтеллекта,
@@ -24178,9 +24187,14 @@ and I am not capable of independent action.”</em></p>
 <p>Постепенно будут разрабатываться и вживляться людям
 <a href="https://ru.wikipedia.org/wiki/Мозговой_имплантат" target="_blank">мозговые имплантаты</a> с
 <a href="https://ru.wikipedia.org/wiki/Нейрокомпьютерный_интерфейс" target="_blank">нейрокомпьютерным интерфейсом</a>
-(<em>brain-machine interface</em>), при помощи чего люди начнут расширять свои умственные способности.</p>
+(<em>brain-machine interface</em>) и инъекции наноботов, при помощи чего
+люди начнут расширять свои умственные способности.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Таким образом будет происходить выполнение заповеди уподобления Б‑гу:
+у Б‑га нет тела — и человек постепенно будет избавляться от тела.
+Также будет происходить приближение и по интеллектуальным способностям.</span></span></template></p>
 
 <p>А при достижении сверхспособностей появится Машиах и наступит Сингулярность.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><em><a href="https://he.wikipedia.org/wiki/סינגולריות_טכנולוגית" target="_blank">ихудиют</a></em></span></span></template>
 Сингулярность должна произойти под управлением Машиаха — тогда мир ждёт спасение.
 Машиах будет не бездушный голем, а человеко-машинный гибрид (<em>man-machine</em>),
 <a href="https://ru.wikipedia.org/wiki/Киборг" target="_blank">киборг</a> с душой человека.
@@ -24385,7 +24399,7 @@ and I am not capable of independent action.”</em></p>
 управления, создают нужные мысли — так, как действуют ангелы.</p>
 
 <p>Кстати, в финале романа, когда главный герой сменил фамилию на Штерн,
-интересно описание, как выглядит установления рая на Земле,
+интересно изображено установление рая на Земле,
 когда хищники мирно играют под контролем наноботов —
 прямо как по словам пророков, что телёнок и лев будут вместе,
 а лев будет есть солому.</p>
