Redirect to en/index.html from index.html by default

--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 ---
-description: "Uriel: Looking at the world through the prism of Judaism"
+description: "URIEL: Looking at the world through the prism of Judaism"
 keywords: judaism, light
 image: /logo.jpg
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
@@ -15,7 +15,7 @@ translations:
   </div>
   <div class="title-page">
     <div class="intro">A new book is offered for free download and reading</div>
-    <div class="title">Uriel: Looking at the world <br />through the prism of Judaism</div>
+    <div class="title">URIEL: Looking at the world <br />through the prism of Judaism</div>
     <div class="button"><a href="/files/book/202412/Uriel.pdf" class="blue-btn btn" download>Download</a></div>
     <div class="button"><a href="/en/book" class="grey-btn btn">Read</a></div>
   </div>
