--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-description: "УРИЭЛЬ: Взгляд на мир сквозь призму иудаизма"
+description: "URIEL: Looking at the world through the prism of Judaism"
 keywords: judaism, light
 image: /logo.jpg
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
@@ -13,26 +13,26 @@ styles:
   if (navigator.language.startsWith('ru') || navigator.languages.includes('ru')) {
     window.location.href = '/ru/';
   } else {
-    window.location.href = '/ru/'; // TODO: '/en/'
+    window.location.href = '/en/';
   }
 "></div>
 
 <div class="main-content">
   <div id="button-updates">
-    <a href="https://uriel.social/@judka" target="_blank">Подписаться на обновления</a>
+    <a href="https://uriel.social/@uriel" target="_blank">Subscribe to updates</a>
   </div>
   <div class="title-page">
-    <div class="intro">Предлагается для свободного скачивания и чтения новая книга</div>
-    <div class="title">УРИЭЛЬ: Взгляд на мир <br />сквозь призму иудаизма</div>
-    <div class="button"><a href="/files/book/202412/Uriel.pdf" class="blue-btn btn" download>Скачать</a></div>
-    <div class="button"><a href="/ru/book" class="grey-btn btn">Читать</a></div>
+    <div class="intro">A new book is offered for free download and reading</div>
+    <div class="title">URIEL: Looking at the world <br />through the prism of Judaism</div>
+    <div class="button"><a href="/files/book/202412/Uriel.pdf" class="blue-btn btn" download>Download</a></div>
+    <div class="button"><a href="/en/book" class="grey-btn btn">Read</a></div>
   </div>
 </div>
 <div class="footer">
-  <div class="license-text">Книга распространяется под лицензией</div>
+  <div class="license-text">The book is distributed under the license</div>
   <div class="license-link"><a href="/LICENSE">Creative Commons Attribution 4.0 International</a></div>
   <div class="copyright">&copy; 2024-<span x-data="{ year: new Date().getFullYear() }" x-text="year">{{ "now" | date: "%Y" }}</span>
-    <a href="/ru/judka">Judka Linkov</a>
+    <a href="/en/judka">Judka Linkov</a>
     <a href="mailto:judka@uriel.world">judka@uriel.world</a>
   </div>
 </div>
