Add language switcher to the home page

--- a/en/index.html
+++ b/en/index.html
@@ -3,22 +3,23 @@ description: "URIEL: Looking at the world through the prism of Judaism"
 keywords: judaism, light
 image: /logo.jpg
 copyright: "(C) 2018-2025 Judka Linkov <judka@uriel.world>"
-layout: default
+layout: home
 styles:
 - /files/home/style.css
 translations:
   ru: /ru
 ---
 <div class="main-content">
-  <div id="button-updates">
-    <a href="https://uriel.social/@uriel" target="_blank">Subscribe to updates</a>
-  </div>
+  {% include home_lang.html %}
   <div class="title-page">
     <div class="intro">A new book is offered for free download and reading</div>
     <div class="title">URIEL: Looking at the world <br />through the prism of Judaism</div>
     <div class="button"><a href="/files/book/202412/Uriel.pdf" class="blue-btn btn" download>Download</a></div>
     <div class="button"><a href="/en/book" class="grey-btn btn">Read</a></div>
   </div>
+</div>
+<div id="button-updates">
+  <a href="https://uriel.social/@uriel" target="_blank">Subscribe to updates</a>
 </div>
 <div class="footer">
   <div class="license-text">The book is distributed under the license</div>
