Add site menu to the home page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ styles:
 "></div>
 
 <div class="main-content">
+  {% include home_menu.html %}
   {% include home_lang.html %}
   <div class="title-page">
     <div class="intro">A new book is offered for free download and reading</div>
