--- a/ru/index.html
+++ b/ru/index.html
@@ -10,6 +10,7 @@ translations:
   en: /en
 ---
 <div class="main-content">
+  {% include home_menu.html %}
   {% include home_lang.html %}
   <div class="title-page">
     <div class="intro">Предлагается для свободного скачивания и чтения новая книга</div>
