--- a/en/index.html
+++ b/en/index.html
@@ -10,6 +10,7 @@ translations:
   ru: /ru
 ---
 <div class="main-content">
+  {% include home_menu.html %}
   {% include home_lang.html %}
   <div class="title-page">
     <div class="intro">A new book is offered for free download and reading</div>
