Small formatting improvements in en/book/index.html and ru/book/index.html

--- a/en/book/index.html
+++ b/en/book/index.html
@@ -211,7 +211,7 @@ and in Sefer HaZohar Beresheet
   <tbody>
     <tr>
       <td>and darkness over the surface of the abyss</td>
-      <td>וְחֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם</td>
+      <td>וְחֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם</td>
     </tr>
     <tr>
       <td> </td>
@@ -1649,7 +1649,7 @@ in scientific research begin to arise.</p>
 It could be said that the principal guideline in the relationship between
 religion and science is as follows:</p>
 
-<ul>
+<ul style="page-break-inside: avoid">
   <li>science without religion is like a body without a soul;</li>
   <li>religion without science is like a soul without a body.</li>
 </ul>
@@ -9644,7 +9644,7 @@ not far from the <a href="https://en.wikipedia.org/wiki/Ponevezh_Yeshiva" target
 <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Information from the book
 <em><a href="https://www.avotaynu.com/books/DJSRE2.htm" target="_blank">A Dictionary of Jewish Surnames from the Russian Empire</a></em>.</span></span></template></p>
 
-<p>It was very offensive when the Orthodoxes mocked my Jewish surname.  As soon
+<p style="page-break-inside: avoid">It was very offensive when the Orthodoxes mocked my Jewish surname.  As soon
 as they learned my surname, the Orthodox rabbis began reproaching me for this
 surname they considered non-Jewish, saying how I should be ashamed to intrude
 among Jews with such a gentile surname — as Ashkenazim with German surnames told me.
@@ -19046,7 +19046,7 @@ while they themselves refuse to feed others.</span></span></template></p>
 <p>Pirkei Avot <a href="https://www.sefaria.org/Pirkei_Avot.5.10" target="_blank">5:10</a>
 divides people into four categories:</p>
 
-<ol>
+<ol style="page-break-inside: avoid">
   <li><template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><em>am ha‑aretz</em></span></span></template> a simpleton, who says: “mine is yours, and yours is mine”;</li>
   <li><template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><em>rasha</em></span></span></template> a wicked person, who says: “mine is mine, and yours is mine”;</li>
   <li>a resident of Sodom, who says: “mine is mine, and yours is yours”;</li>
