Update with small improvements in the book

--- a/en/book/index.html
+++ b/en/book/index.html
@@ -15006,8 +15006,8 @@ And right in the middle of the room was a built-in shower stall with glass
 walls.  When the time came for the young woman to wash, I modestly turned away
 to face the opposite direction.  Throughout the entire time she was washing,
 I exerted every effort not to turn my head and look through the transparent
-walls of the shower stall at the naked young woman.  I shook like the Chernobyl
-reactor before its explosion, but nevertheless I withstood this trial and,
+walls of the shower stall at the naked young woman.  I was shaking like the
+Chernobyl reactor before its explosion, but nevertheless I withstood this trial and,
 despite the enormous temptation, restrained myself and did not transgress
 this commandment.</p>
 
@@ -20349,8 +20349,7 @@ every day I have been freely helping people in this way, performing good deeds.<
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
 <p>By the calculations, my 3,000 commits amount to more than 100 commits
 per year.  That is, on average, 3 days go into discussion, following which
-a commit is made.  (Interestingly, during this time I watched exactly
-the same number of films — on average, 1 film every 3 days.)</p>
+a commit is made.</p>
 </div></div></template>
 
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
@@ -22352,10 +22351,11 @@ as much energy as 17 thousand households.</p>
 
 <p>One possible solution is to use the generated heat for warming buildings.
 Alternatively, data centers could be moved beyond Earth’s atmosphere: into
-near-Earth orbit or onto the Moon (Mars is too far away due to excessive
+near-Earth orbit or onto the Moon, <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Mars is too far away due to excessive
 <a href="https://en.wikipedia.org/wiki/Round-trip_delay" target="_blank">ping</a> — depending on the
-planets’ orbital positions, between 6 and 44 minutes), and then power them
-with solar energy.  It is possible that AI, in the course of its development,
+planets’ orbital positions, between 6 and 44 minutes</span></span></template> and then power them
+with solar energy.  But for implementing this idea too many unsolved problems
+still remain.  However, it is possible that AI, in the course of its development,
 will gradually approach the energy efficiency of the brain, which requires only
 20 watts to operate — like a light bulb.  <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Perhaps this will require changing
 the operational principles of AI, transitioning to analog computing.</span></span></template></p>
