--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -20603,9 +20603,7 @@ from his Mishneh Torah, as implemented by Nachum Dershowitz”.</p>
 
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
 <p>По подсчётам, мои 3000 коммитов составляют более 100 коммитов в год.
-Т.е. в среднем 3 дня идёт на обсуждение, по результатам которого делается коммит.
-(Интересно, что за это время посмотрел точно такое же количество фильмов —
-в среднем 1 фильм на 3 дня.)</p>
+Т.е. в среднем 3 дня идёт на обсуждение, по результатам которого делается коммит.</p>
 </div></div></template>
 
 <template x-if="buttons"><div class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><div class="comment" x-show="open">
@@ -22659,10 +22657,11 @@ provides common API for banks.</span></span></template></p>
 
 <p>Одно из возможных решений — выделяемое тепло использовать для обогрева помещений.
 Или можно вывести дата-центры за пределы атмосферы Земли: на околоземную орбиту
-или на Луну (а до Марса слишком большой
+или на Луну, <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">а до Марса слишком большой
 <em><a href="https://ru.wikipedia.org/wiki/Круговая_задержка" target="_blank">пинг</a></em> —
-в зависимости от расположения планет на орбите от 6 до 44 минут),
+в зависимости от расположения планет на орбите от 6 до 44 минут</span></span></template>
 и тогда питать их солнечной энергией.
+Но для реализации этой идеи остаётся слишком много нерешённых проблем.
 Возможно, что ИИ в процессе развития постепенно будет приближаться
 к энергоэффективности мозга, которому для работы достаточно всего 20 Вт —
 как для лампочки.  <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Может быть, для этого понадобится изменение
