Update with small improvements in the book

--- a/ru/book/index.html
+++ b/ru/book/index.html
@@ -5586,13 +5586,12 @@ toc:
 Другие евреи тоже брали в жёны неевреек, например, египтянок, мидьянок,
 но Шимон взял жену из запрещённых народов, поэтому Тора подчёркивает это.</p>
 
-<p>Принято отождествлять эту кнаанеянку с дочерью Дины.  Тогда
-мать Шауля названа кнаанеянкой, потому что её отцом был язычник Шхем.
-<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">И наверное, Шимон взял её в жёны из-за того, как жители Кнаана поступили с Диной
-(Берешит Рабба <a href="https://www.sefaria.org/Bereshit_Rabbah.80.11" target="_blank">80:11</a>).</span></span></template>
-Но несмотря на то, что она была дочерью еврейки Дины, всё равно она считалась нееврейкой.
+<p>Берешит Рабба <a href="https://www.sefaria.org/Bereshit_Rabbah.80.11" target="_blank">80:11</a>
+отождествляет эту кнаанеянку с Диной — но слишком проблемно утверждать о браке брата и сестры.
+<a href="https://www.sefaria.org/Shadal_on_Genesis.46.8.1" target="_blank">Шадаль</a> называет эту кнаанеянку дочерью Дины.
+Тогда мать Шауля названа кнаанеянкой, потому что её отцом был язычник Шхем.
 То есть дочь отца-нееврея Шхема и матери-еврейки Дины
-была кнаанеянкой, несмотря на то, что росла среди евреев.</p>
+считалась нееврейкой, несмотря на то, что росла среди евреев.</p>
 
 <blockquote>
   <p>И увидел там Йеһуда дочь одного кенаани по имени Шуа
