--- a/en/book/index.html
+++ b/en/book/index.html
@@ -5544,14 +5544,14 @@ Canaanite woman was a Jew, a son of Yisrael.  Other Jews also took non-Jewish
 wives, e.g., Egyptian women, Midianite women, but Shimon took a wife from the
 forbidden nations, therefore the Torah emphasizes this.</p>
 
-<p>This Canaanite woman is commonly identified as the daughter of Dinah.
-Then the mother of Shaul is called a Canaanite because her father was the
-gentile Shekhem.  <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">And probably Shimon took her as a wife because of how
-the inhabitants of Canaan treated Dinah (Beresheet Rabbah
-<a href="https://www.sefaria.org/Bereshit_Rabbah.80.11" target="_blank">80:11</a>).</span></span></template>  But despite the
-fact that she was the daughter of the Jewess Dinah, she was still considered
-a non-Jewess.  That is, the daughter of the non-Jewish father Shekhem and the
-Jewish mother Dinah was a Canaanite, notwithstanding that she grew up among Jews.</p>
+<p>Beresheet Rabbah <a href="https://www.sefaria.org/Bereshit_Rabbah.80.11" target="_blank">80:11</a>
+identifies this Canaanite woman with Dinah — but it’s too problematic
+to assert a marriage between brother and sister.
+<a href="https://www.sefaria.org/Shadal_on_Genesis.46.8.1" target="_blank">Shadal</a> calls her
+the daughter of Dinah.  Then Shaul’s mother is called a Canaanite because
+her father was the gentile Shekhem.  That is, the daughter of the non-Jewish
+father Shekhem and the Jewish mother Dinah was considered non-Jewish, despite
+having been raised among Jews.</p>
 
 <blockquote>
   <p>And Yehudah saw there the daughter of a certain Kenaani whose name was Shua
@@ -6506,7 +6506,7 @@ to undergo conversion.  After conversion he became part of <em>erev rav</em>
 (the mixed multitude) — part of the mixed marriages whose fathers were Egyptians
 and whose mothers were Jewish women who had been enslaved by the Egyptians.
 But Jews through the father had no such problem, because Jews by paternal lineage
-retained their affiliation with their tribe.</p>
+retained their tribal affiliation.</p>
 
 <p>The situation then unfolded as follows: a proselyte from the camp of <em>erev rav</em>
 came to the camp of bnei Yisrael, i.e. <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open"><em>ezrachim</em></span></span></template> the native
