Update with small improvements in the book

--- a/en/book/index.html
+++ b/en/book/index.html
@@ -345,9 +345,9 @@ life would have been impossible.</p>
 through three derivatives of one root (books — <em>sefarim</em>):</p>
 
 <ol>
-  <li><em>sippur</em> — utterance</li>
+  <li><em>sippur</em> — speaking, utterance</li>
   <li><em>sefer</em> — writing</li>
-  <li><em>sfar</em> — number</li>
+  <li><em>safar</em> — counting, number</li>
 </ol>
 
 <p>As explained by <a href="https://en.wikipedia.org/wiki/Judah_Halevi" target="_blank">Yehuda Halevi</a>
@@ -8479,7 +8479,8 @@ Also Yirmeyahu <a href="https://www.sefaria.org/Jeremiah.8.8-9" target="_blank">
 “How can you say: ‘We are wise and the Torah of G‑d is with us’?  But behold, —
 the lying pen of the scribes has distorted it.  The wise are put to shame,
 they are dismayed and trapped; behold, they have rejected the word of G‑d —
-what wisdom is theirs?”</p>
+what wisdom is theirs?”
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Also Mishlei <a href="https://www.sefaria.org/Proverbs.3.7" target="_blank">3:7</a>.</span></span></template></p>
 
 <p>A true sage may be called one to whom the interconnections between the
 phenomena of the world and their place on the path of drawing near to G‑d are
@@ -16237,8 +16238,10 @@ knowledge current at that time.  And now the errors of earlier sages are even
 more evident.</p>
 
 <p>The Torah teaches that not only sages but also prophets can err when they act
-according to their own will rather than following the will of G‑d.  Even the
-greatest prophet, upon whose legislation modern civilization is built, made mistakes.</p>
+according to their own will rather than following the will of G‑d.
+<template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">(Mishlei <a href="https://www.sefaria.org/Proverbs.3.5-6" target="_blank">3:5-6</a>)</span></span></template>
+Even the greatest prophet, upon whose legislation modern civilization is built,
+made mistakes.</p>
 
 <table class="chapter">
   <tbody>
@@ -19280,7 +19283,7 @@ And the right-side sefirot are connected with altruism, with giving.</p>
 
 <p>The sefirah of understanding, Binah, is positioned on the left side above
 the sefirah of Gevurah.  And indeed, the process of gaining understanding is
-performed for oneself — to construct in one’s own mind a complete and clear
+performed for oneself — to build in one’s own mind a complete and clear
 picture with all the associations between details, with all the interrelations
 of the parts of the full structure.  This is an egoistic process.</p>
 
@@ -19352,7 +19355,7 @@ and egoism is the absence of chesed limited by gevurah.</p>
   <li>Tiferet — the equilibrium of the sefirot.</li>
 </ol>
 
-<p>The physical sefirot:</p>
+<p>The sefirot of actions (including social and political):</p>
 
 <ol>
   <li>Hod — preservation of the old order, this is the direction of activity of conservatives.</li>
@@ -19443,7 +19446,7 @@ The first mention in Kabbalah dates no later than the 12th century:
 in <a href="https://en.wikipedia.org/wiki/Bahir" target="_blank">Sefer HaBahir</a>
 <a href="https://www.sefaria.org/Sefer_HaBahir.108" target="_blank">108</a>
 it is described how Gabriel, representing gevurah, was on the left side,
-Michael on the right, and Uriel and truth in the center.
+Michael on the right, and Uriel as the truth in the middle.
 <template x-if="buttons"><span class="comments" x-data="{ open: false }"><button @click="open = !open" @openall.window="open = true">…</button><span class="comment" x-show="open">Moreover, when deviation occurs toward gevurah,
 the angel is called Nuriel, and when toward chesed, Uriel
 (Zohar I 23b:21,
@@ -21596,7 +21599,7 @@ Ukrainians.</p>
 
 <p>But besides the similarities, there are also differences among varieties
 of fascism.  The German fascists killed Jews solely because of their
-nationality, to prevent Jews from mixing with Germans and corrupting
+nationality, to prevent Jews from mixing with Germans and defiling
 the “purity of Aryan blood” with their so-called
 “<a href="https://en.wikipedia.org/wiki/Racial_antisemitism" target="_blank">racially inferior genes</a>”.
 Such ideology forms the foundation of Nazism.  Hence the requirement to wear
@@ -24057,9 +24060,10 @@ by a bloodthirsty dictator with an unbridled evil inclination (<em>yetzer ha‑r
 under the complete control of Satan, he will turn the entire world into utter hell.</p>
 
 <p>And a positive example until recently was America, when it truly was great in the
-recent past, when it took upon itself the duties of world policeman and strove
-to maintain peace and stability throughout the world — albeit with varying
-degrees of success, since it was subject to errors and limitations.
+recent past, when it took upon itself the duties of
+<a href="https://en.wikipedia.org/wiki/Global_policeman" target="_blank">world policeman</a>
+and strove to maintain peace and stability throughout the world — albeit with
+varying degrees of success, since it was subject to errors and limitations.
 But despite committing many mistakes, any other country in maintaining world
 order would have been a greater evil.  For example, in recent times China has
 been desperately seeking to obtain this privilege, but in the role of world
